# apps/api/wwwroot/TalkToCeo-api-spec.json
@@ -103,7 +103,7 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "$ref": "#/components/schemas/CreateMessageRequest"
                             }
@@ -532,7 +532,7 @@
                 }
             }
         },
-        "/messages/attachments/{id}": {
+        "/messages/{messageId}/attachments/{attachmentId}": {
             "get": {
                 "summary": "Download attachment",
                 "operationId": "downloadAttachmentAsync",
@@ -548,12 +548,22 @@
                     {
                         "$ref": "#/components/parameters/client_secret"
                     },
-                    {
-                        "name": "id",
+                  {
+                        "name": "messageId",
                         "in": "path",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    },
+                    {
+                        "name": "attachmentId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
                         }
                     }
                 ],
@@ -601,9 +611,80 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "summary": "Delete attachment",
+                "operationId": "deleteAttachmentAsync",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/client_id"
+                    },
+                    {
+                        "$ref": "#/components/parameters/client_secret"
+                    },
+                    {
+                        "name": "messageId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    },
+                    {
+                        "name": "attachmentId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Attachment deleted successfully"
+                    },
+                    "403": {
+                        "description": "Invalid request parameters",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/InvalidRequestResponse"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Attachment not found"
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "correlationId": "ABCD1234-1234-1234-1234-1234567890AB",
+                                    "error": {
+                                        "code": "E0001",
+                                        "userMessage": "Please contact support",
+                                        "developerMessage": "An unexpected error occurred"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
             }
         },
-        "/messages/{id}attachments": {
+        "/messages/{messageId}/attachments": {
             "post": {
                 "summary": "Upload attachment",
                 "operationId": "uploadAttachmentAsync",
@@ -620,11 +701,24 @@
                         "$ref": "#/components/parameters/client_secret"
                     },
                     {
-                        "name": "id",
+                        "name": "messageId",
                         "in": "path",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    },
+                    {
+                        "name": "attachments",
+                        "in": "formData",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string",
+                                "format": "binary"
+                            }
                         }
                     }
                 ],
